syntax = "proto3";// 指定使用proto3语法
import "ProtoEnum.proto";
import "Common.proto";
package Proto;    //导出cs的命名空间

// 定义一个消息，名为TestRequest
message RequestTest{ 
  int32 num1 = 1; // 页码
  int32 num2 = 2; // 每页结果数
  string str = 3;
}
// 定义一个消息，名为TestResponses
message ResponsesTest{
  string str = 1; // 查询字符串
  int32 num1 = 2; // 页码
  int32 num2 = 3; // 每页结果数
}
//客户端请求连接
message RequestLink{

}
//客户端链接成功
message ResponseLink{
  int32 userId = 1;
}

//创建房间
message RequestCreateRoom{

}
message ResponseCreateRoom{
  RoomData roomData = 1;
}

//加入房间
message RequestJoinRoom{
  int32 roomId = 1;
}
message ResponseJoinRoom{
  RoomData roomData = 1;
}
//有人加入房间
message ResponseOtherJoin{
  UserData userData = 1;
}

//退出房间
message RequestLeaveRoom{
  int32 roomId = 1;
}
message ResponseLeaveRoom{}
//有人离开房间
message ResponseOtherLeave{
  int32 userId = 1;
}
//客户端发送消息
message RequestSend{
  string msg = 1;
} 
message ResponseSend{
  string msg = 1;
}

//其他玩家发送消息
message ResponseOtherSend{
  int32 userId = 1;
  string msg = 2;
}

message ResponseError{
  ErrorCode errorCode = 1;//错误码
}//服务器返回错误码